# storage/api-docs/api-docs.json
@@ -241,6 +241,95 @@
                     }
                 }
             }
+        },
+        "/api/post/create": {
+            "post": {
+                "tags": [
+                    "Posts"
+                ],
+                "summary": "Create post",
+                "description": "Creates a new post and retrieves created post ID",
+                "operationId": "b08a1fa600c97d746857352d3f9c97bf",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "title": {
+                                        "type": "string",
+                                        "example": "New Post"
+                                    },
+                                    "slug": {
+                                        "type": "string",
+                                        "example": "new-post"
+                                    },
+                                    "extract": {
+                                        "type": "string",
+                                        "example": "Short text to describe the post"
+                                    },
+                                    "post": {
+                                        "type": "string",
+                                        "example": "<p>Text of the post which accepts HTML tags</p>"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Operation completed",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "integer",
+                                            "example": "2"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Post created"
+                                        },
+                                        "payload": {
+                                            "type": "string",
+                                            "example": "51"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Authorization failed",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "integer",
+                                            "example": "1"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Authorization failed"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
         }
     },
     "components": {
@@ -311,6 +400,15 @@
                     }
                 },
                 "type": "object"
+            }
+        },
+        "securitySchemes": {
+            "sanctum": {
+                "type": "http",
+                "description": "Token generated by login function",
+                "name": "Sanctum",
+                "in": "header",
+                "scheme": "bearer"
             }
         }
     }
